--- a/src/main/resources/templates/product/productInsert.html
+++ b/src/main/resources/templates/product/productInsert.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 <div>
+    <th:block th:replace="layout/header :: header"></th:block>
     <div>
         <h2>상품 글쓰기</h2>
     </div>
