--- a/src/main/resources/templates/user/term.html
+++ b/src/main/resources/templates/user/term.html
@@ -8,6 +8,7 @@
     <title>회원약관</title>
 </head>
 <body>
+    <th:block th:replace="layout/header :: header"></th:block>
     <div>
         <div>
             <h2>회원약관</h2>
