--- a/src/main/resources/templates/faq/faqList.html
+++ b/src/main/resources/templates/faq/faqList.html
@@ -8,6 +8,7 @@
     <title>FAQ</title>
 </head>
 <body>
+    <th:block th:replace="layout/header :: header"></th:block>
     <div>
         <div>
             <h2>FAQ</h2>
