--- a/src/main/resources/templates/product/productList.html
+++ b/src/main/resources/templates/product/productList.html
@@ -8,6 +8,7 @@
     <title>상품 목록</title>
 </head>
 <body>
+    <th:block th:replace="layout/header :: header"></th:block>
     <div>
         <div>
             <h2>상품 목록</h2>
