회원약관 완료

--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -5,9 +5,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>회원가입</title>
 </head>
 <body>
     <th:block th:replace="layout/header :: header"></th:block>
+    <div>
+        <div>
+            <h2>회원가입</h2>
+        </div>
+    </div>
 </body>
 </html>
