--- a/src/main/resources/templates/user/term.html
+++ b/src/main/resources/templates/user/term.html
@@ -903,14 +903,15 @@
             </div>
             <hr><br>
             <div class="form-check">
-                <input type="checkbox" id="ck_item3" name="ck_item3" class="form-check-input">
+                <input type="checkbox" id="ck_item3" name="ck_item3" class="form-check-input" required>
                 <label for="ck_item3" class="form-check-label"><b>전체 약관에 동의</b></label>
             </div>
             <br><hr><br>
             <div class="form-check">
+                <!-- <a th:href="@{/user/join}">다음 단계</a> -->
                 <button type="button" id="in_btn1" class="button is-info">다음 단계</button>
             </div>
-            <script>
+            <script th:inline="javascript">
                 var ck_item1 = document.getElementById("ck_item1");
                 var ck_item2 = document.getElementById("ck_item2");
                 var ck_item3 = document.getElementById("ck_item3");
@@ -918,7 +919,7 @@
 
                 in_btn1.addEventListener("click", function () {
                     if (ck_item1.checked && ck_item2.checked) {
-                        location.href = "../member/join.do";
+                        location.href = "/user/join";
                     } else {
                         alert("약관 및 개인정보처리 방침에 동의하지 않으셨습니다.");
                         return;
