--- a/src/main/resources/templates/board/boardInsert.html
+++ b/src/main/resources/templates/board/boardInsert.html
@@ -18,7 +18,7 @@
                     <tr>
                         <th>제목</th>
                         <td>
-                            <input type="text" name="title" id="title" placeholder="제목을 입력해주세요." maxlength="20" required>
+                            <input type="text" name="title" id="title" placeholder="제목을 입력해주세요." maxlength="20" required />
                         </td>
                     </tr>
                     <tr>
