--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -13,6 +13,110 @@
         <div>
             <h2>회원가입</h2>
         </div>
+        <form th:action="@{/user/join}" method="post" onsubmit="return join(this)">
+        <table>
+            <tr>
+                <th>
+                    <label for="id">아이디</label>
+                </th>
+                <td>
+                    <input type="text" name="id" id="id" placeholder="아이디를 입력해주세요." maxlength="20" required />
+                </td>
+            </tr>
+            <tr>
+                <th>
+                    <label for="pw">비밀번호</label>
+                </th>
+                <td>
+                    <input type="password" name="pw" id="pw" placeholder="비밀번호를 입력해주세요." maxlength="20" required />
+                </td>
+            </tr>
+            <tr>
+                <th>
+                    <label for="pwcheck">비밀번호 확인</label>
+                </th>
+                <td>
+                    <input type="password" name="pwcheck" id="pwcheck" placeholder="비밀번호를 다시 입력해주세요." maxlength="20" required />
+                </td>
+            </tr>
+            <tr>
+                <th>
+                    <label for="name">이름</label>
+                </th>
+                <td>
+                    <input type="text" name="name" id="name" placeholder="이름을 입력해주세요." maxlength="50" required />
+                </td>
+            </tr>
+            <tr>
+                <th>
+                    <label for="tel">전화번호</label>
+                </th>
+                <td>
+                    <input type="tel" name="tel" id="tel" placeholder="전화번호를 입력해주세요." maxlength="13" required />
+                </td>
+            </tr>
+            <tr>
+                <th>
+                    <label for="email">이메일</label>
+                </th>
+                <td>
+                    <input type="email" name="email" id="email" placeholder="이메일을 입력해주세요." maxlength="" required />
+                </td>
+            </tr>
+            <tr>
+                <th>
+                    <label for="addr1">주소</label>
+                </th>
+                <td>
+                    <input type="text" name="addr1" id="addr1" placeholder="주소를 입력해주세요." maxlength="30" required />
+                </td>
+            </tr>
+            <tr>
+                <th>
+                    <label for="addr2">상세주소</label>
+                </th>
+                <td>
+                    <input type="text" name="addr2" id="addr2" placeholder="상세주소를 입력해주세요." maxlength="" />
+                </td>
+            </tr>
+            <tr>
+                <th>
+                    <label for="postcode">우편번호</label>
+                </th>
+                <td>
+                    <input type="text" name="postcode" id="postcode" placeholder="우편번호를 입력해주세요." maxlength="10" required />
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <button type="submit">가입</button>
+                </td>
+                <td>
+                    <button type="reset">취소</button>
+                </td>
+            </tr>
+        </table>
+        </form>
+        <script th:inline="javascript">
+            //var pw = document.getElementById("pw").value;
+            //var pwcheck = document.getElementById("pwcheck").value;
+            //var userjoin_btn = document.getElementById("userjoin_btn");
+
+            /*userjoin_btn.addEventListener("click", function () {
+                if () {
+                    pw
+                    location.href = "/user/login";
+                }
+            })*/
+            function join(f) {
+                alert(f.pw.value);
+                alert(f.pwcheck.value);
+                if(f.pw.value!=f.pwcheck.value) {
+                    alert("비밀번호가일치하지않습니다.");
+                    return false;
+                }
+            }
+        </script>
     </div>
 </body>
 </html>
