--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -8,6 +8,13 @@
     <title>마이페이지</title>
 </head>
 <body>
-    <th:block th:replace="layout/header :: header"></th:block>
+<th:block th:replace="layout/header :: header"></th:block>
+<div>
+    <h2>마이페이지</h2>
+    <tr>
+        <td>회원정보</td>
+
+    </tr>
+</div>
 </body>
 </html>
