게시판 조회수 기능 제작 중

--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -12,8 +12,7 @@
 <div>
     <h2>마이페이지</h2>
     <tr>
-        <td>회원정보</td>
-
+        <td><a th:href="@{'/user/userDetail'}">회원정보</a></td>
     </tr>
 </div>
 </body>
