--- a/src/main/resources/templates/user/userDetail.html
+++ b/src/main/resources/templates/user/userDetail.html
@@ -55,9 +55,13 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <a th:href="@{/user/userEdit?uno=${ud.uno}}"><button>수정</button></a>
+<!--                        <button type="button" onclick="location.href=@{/user/userEdit}">수정</button>-->
+<!--                        <button type="button" class="button is-link is-rounded is-outlined" onclick="location.href='${path14}/member/update.do?id=${sid }'">회원 정보 변경</button>-->
+<!--                        <a th:href="@{'/board/boardDetail?bno=' + ${bl.bno}}"></a>-->
+<!--                        <a th:href="@{'/user/userEdit?=' + ${ud.uno}}">수정</a>-->
+                        <a th:href="@{/user/userEdit}">수정</a>
                         &nbsp;
-                        <a th:href="@{/user/userDelete?uno=${ud.uno}}"><button>삭제</button></a>
+                        <a th:href="@{/user/userDelete}"><button>탈퇴</button></a>
                     </td>
                 </tr>
             </table>
