--- a/src/main/resources/templates/user/userEdit.html
+++ b/src/main/resources/templates/user/userEdit.html
@@ -12,14 +12,22 @@
     <div>
         <h2>회원정보 수정하기</h2>
         <div class="container">
-            <form th:action="@{/user/userEdit}" method="post">
+            <form th:action="@{/user/userEdit}" method="post" onsubmit="return join(this)">
                 <table>
+                    <tr>
+                        <th>
+                            <label>회원번호</label>
+                        </th>
+                        <td>
+                            [[${userEdit.uno}]]
+                        </td>
+                    </tr>
                     <tr>
                         <th>
                             <label>아이디</label>
                         </th>
                         <td>
-                            [[session.sid]]
+                            [[${session.sid}]]
                         </td>
                     </tr>
                     <tr>
@@ -27,7 +35,7 @@
                             <label for="pw">비밀번호</label>
                         </th>
                         <td>
-                            <input type="password" name="pw" id="pw" placeholder="비밀번호를 입력해주세요." maxlength="20" required />
+                            <input type="password" name="pw" id="pw" placeholder="비밀번호를 입력해주세요." th:value="${userEdit.pw}" maxlength="20" required />
                         </td>
                     </tr>
                     <tr>
@@ -35,7 +43,7 @@
                             <label for="pwcheck">비밀번호 확인</label>
                         </th>
                         <td>
-                            <input type="password" name="pwcheck" id="pwcheck" placeholder="비밀번호를 다시 입력해주세요." maxlength="20" required />
+                            <input type="password" name="pwcheck" id="pwcheck" placeholder="비밀번호를 다시 입력해주세요." th:value="${userEdit.pw}" maxlength="20" required />
                         </td>
                     </tr>
                     <tr>
@@ -43,7 +51,7 @@
                             <label for="name">이름</label>
                         </th>
                         <td>
-                            <input type="text" name="name" id="name" placeholder="이름을 입력해주세요." maxlength="50" required />
+                            <input type="text" name="name" id="name" placeholder="이름을 입력해주세요." th:value="${userEdit.name}" maxlength="50" required />
                         </td>
                     </tr>
                     <tr>
@@ -51,7 +59,7 @@
                             <label for="tel">전화번호</label>
                         </th>
                         <td>
-                            <input type="tel" name="tel" id="tel" placeholder="전화번호를 입력해주세요." maxlength="13" required />
+                            <input type="tel" name="tel" id="tel" placeholder="전화번호를 입력해주세요."th:value="${userEdit.tel}" maxlength="13" required />
                         </td>
                     </tr>
                     <tr>
@@ -59,7 +67,7 @@
                             <label for="email">이메일</label>
                         </th>
                         <td>
-                            <input type="email" name="email" id="email" placeholder="이메일을 입력해주세요." maxlength="" required />
+                            <input type="email" name="email" id="email" placeholder="이메일을 입력해주세요." th:value="${userEdit.email}" maxlength="" required />
                         </td>
                     </tr>
                     <tr>
@@ -67,7 +75,7 @@
                             <label for="addr1">주소</label>
                         </th>
                         <td>
-                            <input type="text" name="addr1" id="addr1" placeholder="주소를 입력해주세요." maxlength="30" required />
+                            <input type="text" name="addr1" id="addr1" placeholder="주소를 입력해주세요." th:value="${userEdit.addr1}" maxlength="30" required />
                         </td>
                     </tr>
                     <tr>
@@ -75,7 +83,7 @@
                             <label for="addr2">상세주소</label>
                         </th>
                         <td>
-                            <input type="text" name="addr2" id="addr2" placeholder="상세주소를 입력해주세요." maxlength="" />
+                            <input type="text" name="addr2" id="addr2" placeholder="상세주소를 입력해주세요." th:value="${userEdit.addr2}" maxlength="100" />
                         </td>
                     </tr>
                     <tr>
@@ -83,12 +91,12 @@
                             <label for="postcode">우편번호</label>
                         </th>
                         <td>
-                            <input type="text" name="postcode" id="postcode" placeholder="우편번호를 입력해주세요." maxlength="10" required />
+                            <input type="text" name="postcode" id="postcode" placeholder="우편번호를 입력해주세요." th:value="${userEdit.postcode}" maxlength="10" required />
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            <button type="submit">가입</button>
+                            <button type="submit">수정</button>
                         </td>
                         <td>
                             <button type="reset">취소</button>
@@ -96,6 +104,14 @@
                     </tr>
                 </table>
             </form>
+            <script th:inline="javascript">
+                function join(f) {
+                    if(f.pw.value!=f.pwcheck.value) {
+                        alert("비밀번호가 일치하지 않습니다.");
+                        return false;
+                    }
+                }
+            </script>
         </div>
     </div>
 </body>
