아이디 중복 확인 기능 제작중

--- a/src/main/resources/templates/board/boardDetail.html
+++ b/src/main/resources/templates/board/boardDetail.html
@@ -17,6 +17,10 @@
                     <td><span th:text="${bd.bno}"></span></td>
                 </tr>
                 <tr>
+                    <th>작성자</th>
+                    <td><span th:text="${bd.author}"></span></td>
+                </tr>
+                <tr>
                     <th>제목</th>
                     <th><span th:text="${bd.title}"></span></th>
                 </tr>
