--- a/src/main/resources/templates/user/join.html
+++ b/src/main/resources/templates/user/join.html
@@ -12,7 +12,7 @@
     <th:block th:replace="layout/header :: header"></th:block>
     <div>
         <h2>회원가입</h2>
-        <form th:action="@{/user/join}" method="post" onsubmit="return join(this)">
+        <form th:action="@{/user/join}" method="post" onsubmit="return join(this);">
         <table>
             <tr>
                 <th>
@@ -21,7 +21,8 @@
                 <td>
                     <input type="text" name="id" id="id" placeholder="아이디를 입력해주세요." maxlength="20" required />
                     <button type="button" onclick="idCheck()">중복검사</button>
-                    <h6 id="idCk" name="idCk" style="margin:0px"></h6>
+                    <input type="hidden" name="idCk" id="idCk">
+                    <h6 id="msg" style="margin:0px"></h6>
                 </td>
             </tr>
             <tr>
@@ -101,8 +102,9 @@
         <script>
             $(document).ready(function(){
                 $("#id").keyup(function(){
-                    $("#idCk").val()="";
-                    alert("아이디중복확인을하지않으셨습니다.")
+                    $("#idCk").val("no");
+                    console.log("idCk val 확인"+$("#idCk").val());
+                    $("#msg").text("아이디를 입력중입니다.")
                     return false;
                 })
             })
@@ -115,19 +117,21 @@
                     alert("비밀번호가일치하지않습니다.");
                     return false;
                 }
-                if(f.idCk.value!=""){
-                    alert("아이디중복확인을하지않으셨습니다.");
-                    return false;
-                    $("#idCk").text("이미 사용중인 아이디입니다.");
-                }
+                alert("idCk Value"+$("#idCk").val());
 
+                if($("#idCk").val()!="yes"){
+                    alert("아이디 중복 확인을 하지 않으셨습니다.");
+                    return false;
+                    $("#msg").text("아이디 중복 확인을 하지 않으셨습니다.");
+                }
+                return false;
             }
-        </script>
-        <script>
+
             function idCheck(){
                 if($("#id").val()==""){
                     alert("아이디를 입력하지 않았습니다.");
-                    $("#idCk").text("");
+                    $("#idCk").val("no")
+                    $("#msg").text("아이디를 입력하지 않았습니다.");
                     $("#id").focus();
                     return false;
                 }
@@ -142,16 +146,16 @@
                         var idPass = result;
                         if(idPass == false){
                             $("#idCk").val("no")
-                            $("#idCk").text("이미 사용중인 아이디입니다.");
+                            $("#msg").text("이미 사용중인 아이디입니다.");
                             alert("이미 사용중인 아이디입니다.");
                             $("#id").focus();
                         } else if(idPass == true){
-                            $("#idCk").val("yes")
-                            $("#idCk").text("사용 가능한 아이디입니다.");
+                            $("#idCk").val("yes");
+                            $("#msg").text("사용 가능한 아이디입니다.");
                             alert("사용 가능한 아이디입니다.");
                         } else if(idPass==""){
                             $("#idCk").val("no")
-                            $("#idCk").text("아이디가 확인되지 않았습니다. 다시 시도하시기 바랍니다.");
+                            $("#msg").text("아이디가 확인되지 않았습니다. 다시 시도하시기 바랍니다.");
                         }
                     }
                 });
