--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <title>로그인</title>
 </head>
 <body>
@@ -35,9 +36,18 @@
                         </td>
                     </tr>
                 </table>
-
             </form>
+            <script>
+                var msg = "${msg.value}";
+                if(msg == "error1" || "error2") {
+                    alert("아이디가 존재하지 않거나 비밀번호가 일치하지 않습니다.");
+                };
+
+                $("#id").focus();
+
+            </script>
         </div>
     </div>
+
 </body>
 </html>
